# Manage-System

./: README.md
manage system/: Boss.cpp  Boss.h  CMakeLists.txt  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  work_manage.cpp  work_manage.h  worker.h
